--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -5,3 +5,5 @@ cassandra.clientPassword=b4e67a2ca3466980d0a2f24d0307c24aea3c06b2bb9d6a1c97770de
 logging.level.org.springframework=INFO
 
 server.port=${PORT:5000}
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
