for azure cassandra

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,9 +1,10 @@
 cassandra.keyspace=jnotes
-cassandra.clientUsername=jnotes_client
-cassandra.clientPassword=7b7d0b9959e05058dc4c9845a3acc400
+cassandra.username=cassandra
+cassandra.password=cassandra
 cassandra.hostname=localhost
 cassandra.port=9042
 cassandra.datacenter=datacenter1
+cassandra.region=
 
 logging.level.org.springframework=DEBUG
 
